Fix image scrolling issue in red circle - add overflow hidden and proper image constraints

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -34,6 +34,7 @@
       align-items: center;
       justify-content: center;
       float: right;
+      overflow: hidden;
 
       @include desktop {
         width: 700px;
@@ -53,12 +54,15 @@
     img {
       height: 90%;
       margin-top: 80px;
+      max-width: 100%;
+      object-fit: contain;
 
       @include mobile {
         height: 80%;
         width: auto;
         object-fit: cover;
         margin: 80px auto 0;
+        max-width: 100%;
       }
     }
   }
